# FinalGraphicsProject

./: CMakeLists.txt  README.md
assignments/final/: CMakeLists.txt  main.cpp
assignments/final/assets/: hudElement.frag  hudElement.vert  sphere.frag  sphere.vert  textRendering.frag  textRendering.vert  torus.frag  torus.vert
core/: CMakeLists.txt
core/cobb/: TorusGen.cpp  TorusGen.h  camera.cpp  camera.hpp  geometry.cpp  geometry.hpp  line.cpp  line.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  shader.cpp  shader.hpp  spriteRendering.cpp  spriteRendering.h  textRendering.cpp  textRendering.h  texture2d.cpp  texture2d.hpp  window.cpp  window.hpp
core/cobb/assets/: line.frag  line.vert
